# agentic_ai_project

./: .gitignore  README.md  dockerfile  pyproject.toml  report.md  requirements.txt
knowledge/: user_preference.txt
src/agent_crewai/: api.py  crew.py  main.py
src/agent_crewai/config/: agents.yaml  tasks.yaml
