[project]
name = "agent_crewai"
version = "0.1.0"
description = "agent_crewai using crewAI"
authors = [{ name = "veeramanicadas", email = "veeramanicadas.kannan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
]

[project.scripts]
agent_crewai = "agent_crewai.main:run"
run_crew = "agent_crewai.main:run"
train = "agent_crewai.main:train"
replay = "agent_crewai.main:replay"
test = "agent_crewai.main:test"
run_with_trigger = "agent_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
